# MindMate

./: .gitignore  README.md  Readme.md
backend/: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  ASSESSMENT_WORKFLOW_ISSUES_REPORT.md  DA_TPA_FIXES.md  Dockerfile  FIXATION_PLAN.md  FIXATION_PROGRESS_SUMMARY.md  OVERALL_PROGRESS.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_PROGRESS.md  README.md  SRA_SERVICE_FIXES.md  TPA_FIXES_COMPLETE.md  WORKFLOW_ISSUES_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_assessment_router.py  test_assessment_workflow.py  test_assessment_workflow_comprehensive.py  test_da_tpa_modules.py  test_output.txt  test_sra_service.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  llm_client.py  orchestrator.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  llm_client.py  logging_config.py  security.py  workflow.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  admin.py  appointment.py  assessment.py  base.py  forum.py  patient.py  session_models.py  specialist.py  specialist_favorites.py
backend/app/schemas/: auth.py  (+15 more)
backend/scripts/: __init__.py  benchmark_confusion_matrix.py  init_db_v2.py  reset_db.py  stress_test_agents.py  test_agentic_diagnosis.py  test_assessment_flow.py  test_booking_v2.py  test_diagnosis_scoring.py  test_full_system_v2.py  test_matcher_flow.py  test_sra_flow.py  update_imports.py  validate_structure.py  verify_api_contracts.py  verify_auth_v2.py  verify_email.py
backend/tests/: __init__.py
(+558 files in other folders)
